appId: com.resourcrelationnelles.app
name: "Admin - access admin tab (admin user)"
env:
  E2E_EMAIL: "admin-e2e@test.local"
  E2E_PASSWORD: "Password123!"
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Connexion"
    commands:
      - tapOn: "Email"
      - inputText: ${E2E_EMAIL}
      - hideKeyboard
      - tapOn: "Mot de passe"
      - inputText: ${E2E_PASSWORD}
      - hideKeyboard
      - tapOn: "Se connecter"
      - waitForAnimationToEnd
- tapOn:
    text: "Admin"
    optional: true
- waitForAnimationToEnd
